<?xml version="1.0" encoding="utf-8"?>
<com.sothree.slidinguppanel.SlidingUpPanelLayout
    android:id="@+id/drawer"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:gravity="bottom"
    tools:context=".MainActivity"
    app:umanoDragView="@id/main"
    app:umanoOverlay="true"
    app:umanoParallaxOffset="0dp"
    app:umanoPanelHeight="70dp"
    app:umanoShadowHeight="0dp">
    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_margin="30dp"
            android:fontFamily="sans-serif-light"
            android:text="@string/diary"
            android:textColor="@color/font"
            android:textSize="28sp"
            android:textStyle="bold"
            android:shadowRadius="2"
            android:shadowColor="#C3C3C3"
            android:shadowDx="5"
            android:shadowDy="5"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center_horizontal"
            android:fontFamily="sans-serif-light"
            android:text="@string/_1627_02_17"
            android:textColor="@color/font"
            android:textSize="24sp"
            android:shadowRadius="2"
            android:shadowColor="#C3C3C3"
            android:shadowDx="5"
            android:shadowDy="5"/>
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_margin="20dp"
            android:background="@drawable/calendar"
            android:elevation="8dp">
            <CalendarView android:id="@+id/calendar"
                android:layout_marginTop="-60dp"
                android:theme="@style/calendarViewCustom"
                android:dateTextAppearance="@style/calendarViewDateCustomText"
                android:weekDayTextAppearance="@style/calendarViewWeekCustomText"
                />
        </TableLayout>
    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:background="@drawable/drawer"
        android:elevation="40dp">
        <TextView android:id="@+id/text_5zRap"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/how_are_you_feeling_today"
            android:textStyle="bold"
            android:textColor="@color/font"
            android:textSize="25sp"
            android:fontFamily="sans-serif-light"/>

        <EditText
            android:inputType="text"
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginTop="70dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/font"
            android:fontFamily="sans-serif-light"
            android:textSize="30sp"
            android:hint="@string/write_your_amazing_day"
            android:textColorHint="@color/font_light"
            android:backgroundTint="@color/white"
            android:textCursorDrawable="@drawable/cursor"
            android:textColorHighlight="@color/base"
            android:textSelectHandle="@color/base"
            android:textSelectHandleLeft="@color/base"
            android:textSelectHandleRight="@color/base"
            android:gravity="top"
            />
        <Button android:id="@+id/complete_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="120dp"
            android:layout_height="50dp"
            android:background="@drawable/button"
            android:text="@string/complete"
            android:textAllCaps="false"
            android:textColor="@color/base_hard"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:elevation="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.sothree.slidinguppanel.SlidingUpPanelLayout>